# patnic-wekker-radio

./: .gitignore  README.md  patnic-wekker-radio.code-workspace
backend/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  uart_tester.py
backend/main/: CMakeLists.txt  Kconfig.projbuild  captive_portal.c  captive_portal.h  idf_component.yml  main.c  nvs_settings.c  nvs_settings.h  radio_player.c  radio_player.h  uart_ctrl.c  uart_ctrl.h  weather.c  weather.h  wifi_manager.c  wifi_manager.h
components/wekker_protocol/: CMakeLists.txt  wekker_protocol.c  wekker_protocol.h
frontend/: CMakeLists.txt  README.md  uart_tester.py
frontend/components/aht20/: CMakeLists.txt  aht20.c  aht20.h
frontend/components/can/: CMakeLists.txt  can.c  can.h
frontend/components/i2c/: i2c.c  i2c.h
frontend/components/lyrat_ctrl/: CMakeLists.txt  lyrat_ctrl.c  lyrat_ctrl.h
frontend/components/tsl2591/: CMakeLists.txt  tsl2591.c  tsl2591.h
frontend/components/usart/: usart.c  usart.h
frontend/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
frontend/main/ui/: wekker_ui.c  wekker_ui.h
frontend/main/ui/fonts/: lv_font_montserrat_120_digits.c  lv_font_montserrat_120_digits.h
